<resources>
    <string name="app_name">SelectPic - 快速展示图片</string>
    <string name="app_NewName">SelectPic</string>
    <string name="ChoosePic">Choose A Pic</string>
    <string name="Tips">
        长摁选择显示的图片，下次打开软件会直接显示这张图片。\n
        本软件只在18:9的机器上测试过，出现bug短时间尽量改\n

        本软件没有自动更新，请到酷安自行下载更新
    </string>
    <string name="Settings">设置</string>
    <string name="ChangePic">更换图片</string>
    <string name="DeletePic">删除图片</string>
    <string name="SharePic">分享图片</string>
    <string name="SpWd">悬浮窗设置(单击)</string>
    <string name="spOp">打开App</string>
    <string name="ImgSp">悬浮显示图片(建设中……)</string>
    <string name="NullStr">空</string>
    <string name="Transparency">透明度：</string>
    <string name="z2h">0-100</string>
    <string name="Preview">预览</string>
    <string name="saveAll">保存所有更改</string>
    <string name="SettingTODO">长按悬浮窗关闭悬浮窗（会有60ms震动提示）</string>
    <string name="wakeup">保持唤醒</string>
    <string name="zoom">启用缩放</string>
    <string name="changeName">桌面图标名称显示为“SelectPic”</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
