<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:textSize="30sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/SaveAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveAll"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_1"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SpWd"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />
            <RadioGroup
                android:id="@+id/RG_SpW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/RB_Empty"
                    android:text="@string/NullStr"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="3dp"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/RB_OpenApp"
                    android:text="@string/spOp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="3dp"/>
                <RadioButton
                    android:id="@+id/RB_OpenPic"
                    android:text="@string/ImgSp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="3dp"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingTODO"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Transparency"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/Transparency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/z2h"/>
                <Button
                    android:id="@+id/PreviewTrans"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Preview"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/ImgPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher_round"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wakeup"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp" />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/wakeup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray_1"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>